# litex-engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
demo/: main.cpp
include/litex/: core.h  particle.h  particle_world.h  precision.h
include/renderer/: renderer.h
include/sdl/: engine.h  renderer.h
src/: engine.cpp  particle.cpp  particle_world.cpp  renderer.cpp
tests/: main.cpp
